--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,3 +1,3 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/jdbc:mysql://localhost:3306/real_estate1
+spring.datasource.url = jdbc:mysql://localhost:3306/real_estate1
 spring.datasource.username = root
 spring.datasource.password = Binbin29042004
